--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-
-#spring.datasource.url=jdbc:h2:mem:patient-db
-#spring.h2.console.enabled=true
-spring.datasource.url=jdbc:mysql://localhost:3306/DBP?createDatabaseIfNotExist=true
-spring.datasource.username=root
- spring.datasource.password=balha1987
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-server.port=8085 
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:mem:hospital-db
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/hospital?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+# spring.datasource.password=balha1987
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+server.port=8085
+#spring.jpa.show-sql=true
